# bioinf

./: 120706O2c1_LZ-MvD-0297-MabCampth-trypsin_007.tsv  CMakeLists.txt
cmake-modules/: FindOpenCV.cmake
include/: massGeneration.h  spectrumAnalyzer.h  tsvParser.h  xmlParser.h
src/: main.cpp  massGeneration.cpp  spectrumAnalyzer.cpp  tsvParser.cpp  xmlParser.cpp
